Fix nav bar compact menu gap

--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -124,7 +124,7 @@
 @media (max-width: 960px) {
     .nav-links {
         position: absolute;
-        top: 80px;
+        top: 72px;
         left: 0;
         width: 100%;
         background-color: var(--bg-color);
@@ -135,7 +135,7 @@
 
     .nav-links.open {
         display: flex;
-        margin: 10px 0px;
+        margin-bottom: 10px;
     }
 
     .nav-links.open li {
@@ -144,5 +144,13 @@
 
     .menu-icon {
         display: block;
+    }
+
+    .search-box {
+        margin-top: 10px;
+    }
+
+    .navbar {
+        padding: 15px 2%;
     }
 }
